--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@ng-bootstrap/ng-bootstrap": "^13.1.0",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.2.0",
+    "json-server": "^0.17.1",
+    "ngx-file-drop": "^14.0.2",
     "ngx-snackbar": "^2.0.1",
     "ngx-ui-loader": "^13.0.0",
     "rxjs": "~7.5.0",
